# Pyrite-old2

./: .gitignore  Cargo.toml  README.md  pyrite.toml
.github/workflows/: rust.yml
arm/: Cargo.toml
arm/src/: alu.rs  lib.rs  memory.rs  registers.rs
arm/src/arm_instructions/: instr_block_data_transfer.rs  instr_coprocessor.rs  instr_dataproc.rs  instr_hws_data_transfer.rs  instr_mul.rs  instr_single_data_transfer.rs  mod.rs
arm/src/thumb_instructions/: instr.rs  mod.rs
arm/tests/: arm_branch.rs  arm_dataproc_instr.rs  arm_mul.rs  arm_psr_transfer.rs  arm_single_data_transfer.rs  arm_swi.rs
arm/tests/common/: cpu.rs  devkit.rs  memory.rs  mod.rs
bios/: .gitignore  Makefile  bios-reset.s  bios.ld  bios.s  common.c  constants.inc
egui-debugger/: Cargo.toml
egui-debugger/src/: audio.rs  ioregs.rs  lib.rs  performance.rs
gba/: Cargo.toml
gba/src/: audio.rs  dma.rs  interrupts.rs  lib.rs  memory.rs  scheduler.rs  timers.rs  video.rs
gba/src/audio/: sampler.rs
gba/src/memory/: gamepak.rs  io.rs  mod.rs  palette.rs  sram.rs
gba/src/memory/io/: constants.rs  mod.rs  types.rs
gba/src/memory/io/types/: audio.rs  dma.rs  interrupts.rs  lcd.rs  mod.rs  sound.rs  system.rs  timers.rs
gba/src/video/: line.rs  mod.rs  mode0.rs  mode1.rs  mode2.rs  mode3.rs  mode4.rs  mode5.rs  obj.rs  text.rs
pyrite/: Cargo.toml
pyrite-gl/: Cargo.toml
pyrite-gl/shaders/: gba.frag  gba.vert
pyrite-gl/src/: audio.rs  debuggerui.rs  gbaui.rs  glutil.rs  main.rs  pyrite_window.rs
pyrite-sdl/: Cargo.toml  build.rs
pyrite-sdl/src/: main.rs
pyrite/src/: config.rs  core.rs  lib.rs
util/src/: array.rs  bits.rs  circular.rs  fixedpoint.rs  lib.rs  macros.rs  mem.rs  sort.rs  spinlock.rs
