[workspace]
members = ["pyrite", "gba", "arm", "pyrite-sdl"]
resolver = "2"

[profile.dev]
opt-level = 2
debug-assertions = true

[profile.profiling]
inherits = 'release'
opt-level = 3
debug = 2
debug-assertions = false

# This will optimize all dependencies but should leave workspace members alone.
[profile.dev.package."*"]
opt-level = 3
debug = 1 # line tables only
debug-assertions = true