[package]
name = "pyrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba = { path = "../gba" }
log = "0.4"
spin_sleep = "1.1.0"
toml = "0.5"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.crossbeam]
version = "0.8.1"
features = ["crossbeam-channel"]